# cqhttp-bot-frame

./: Cargo.toml
src/: bot.rs  lib.rs  msg.rs
src/cq_msg/: recv.rs  send.rs
